[tool.poetry]
name = "qutedb-crawler"
version = "0.1.0"
description = "A Python script to crawl directories containing Qubic test files"
authors = ["Maurizio Tomasi <ziotom78@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.1"
astropy = "^3.2"
numpy = "^1.18"
scipy = "^1.4"
satorchipy = { git = "https://github.com/satorchi/mypy" }
qubicpack = { git = "https://github.com/satorchi/qubicpack" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
qutedb-crawler = "qutedb_crawler:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
